--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         <div id="cart-items" class="card"></div>
         <p id="cart-total" class="total">Total: $0.00</p>
 
-        <form id="checkout-form" class="card form">
+        <form
+          id="checkout-form"
+          class="card form"
+          action="https://formspree.io/f/xlgwdkbv"
+          method="POST"
+        >
           <h3>Checkout</h3>
           <label>
             Name
@@ -57,6 +62,8 @@
             Pickup / Delivery Notes
             <textarea name="notes" rows="3" placeholder="e.g., Pickup at 4pm"></textarea>
           </label>
+          <input type="hidden" name="order_items" id="order-items-field" />
+          <input type="hidden" name="order_total" id="order-total-field" />
           <button type="submit" class="btn">Submit Order</button>
           <p id="order-status" class="status" aria-live="polite"></p>
         </form>
