Add hidden input for bot protection

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <!-- We'll fill these with JS right before submitting -->
   <input type="hidden" name="order_items" id="order-items-field" />
   <input type="hidden" name="order_total" id="order-total-field" />
+     <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
 
   <button type="submit" class="btn">Submit Order</button>
   <p id="order-status" class="status" aria-live="polite"></p>
