Add hidden input field to checkout form

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <div id="cart-items" class="card"></div>
         <p id="cart-total" class="total">Total: $0.00</p>
 
+        <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
+
+
    <form
   id="checkout-form"
   class="card form"
