Remove header and reviews section from index.html
Removed header and reviews section from the HTML file, and updated the footer year.

--- a/index.html
+++ b/index.html
@@ -18,19 +18,7 @@
       </div>
     </section>
 
-    <header class="hero">
-      <div class="container">
-        <h2>The Good Batch Bakery</h2>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header class="hero">
-      <div class="container">
-        <h1>The Good Batch Bakery</h1>
-        <p>Fresh bakes, custom cakes, and quick online ordering.</p>
-        <a href="#order" class="btn">Place an Order</a>
-      </div>
-    </header>
+    
 
     <main class="container">
       <section id="menu">
@@ -89,37 +77,11 @@
 
       </section>
 
-      <section id="reviews">
-        <h2>Customer Reviews</h2>
-        <form id="review-form" class="card form">
-          <label>
-            Your Name
-            <input type="text" name="reviewer" required />
-          </label>
-          <label>
-            Rating
-            <select name="rating" required>
-              <option value="5">5 - Amazing</option>
-              <option value="4">4 - Great</option>
-              <option value="3">3 - Good</option>
-              <option value="2">2 - Okay</option>
-              <option value="1">1 - Needs improvement</option>
-            </select>
-          </label>
-          <label>
-            Review
-            <textarea name="message" rows="3" required></textarea>
-          </label>
-          <button type="submit" class="btn">Post Review</button>
-        </form>
-
-        <div id="review-list" class="stack"></div>
-      </section>
-    </main>
+    
 
     <footer>
       <div class="container">
-        <p>© <span id="year"></span> The Good Batch Bakery</p>
+        <p>© <span id="year"></span> The Good Batch Bakery 2025</p>
       </div>
     </footer>
 
