Update brand banner section in index.html
Removed content from the brand banner section.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section class="brand-banner" aria-label="The Good Batch Bakery banner">
-      <div class="banner-frame">
-        <p class="banner-mark">🍪</p>
-        <h1 class="banner-title">THE GOOD BATCH</h1>
-        <p class="banner-subtitle">BAKERY</p>
-        <p class="banner-tagline">Homemade · Handmade · Cookies & More</p>
-      </div>
+  <section class="brand-banner" aria-label="The Good Batch Bakery banner">
+    <div class="banner-frame"></div>
+  </section>
+</body>
+
     </section>
 
     
