Fix banner cropping on desktop and remove mobile border

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       </section>
 
       <section id="order">
-        <h2>Your Order</h2>
+        <div class="order-heading">
+          <h2>Your Order</h2>
+          <button id="clear-cart-btn" type="button" class="btn btn-secondary">Clear cart</button>
+        </div>
         <div id="cart-items" class="card"></div>
         <p id="cart-total" class="total">Total: $0.00</p>
 
@@ -80,6 +83,7 @@
         </form>
 
       </section>
+    </main>
 
     
 
