--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           </label>
 
           <label>
-            Pickup / Delivery Notes
-            <textarea name="notes" rows="3" placeholder="e.g., Pickup at 4pm"></textarea>
+            Notes
+            <textarea name="notes" rows="3" placeholder="e.g., I would like these by Saturday, Pickup at 4pm"></textarea>
           </label>
 
           <!-- We'll fill these with JS right before submitting -->
@@ -89,7 +89,7 @@
 
     <footer>
       <div class="container">
-        <p>© <span id="year"></span> The Good Batch Bakery 2025</p>
+        <p>© <span id="year"></span> The Good Batch Bakery </p>
       </div>
     </footer>
 
