Fix button text to use consistent capitalization

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="order">
         <div class="order-heading">
           <h2>Your Order</h2>
-          <button id="clear-cart-btn" type="button" class="btn btn-secondary">Clear cart</button>
+          <button id="clear-cart-btn" type="button" class="btn btn-secondary">Clear Cart</button>
         </div>
         <div id="cart-items" class="card"></div>
         <p id="cart-total" class="total">Total: $0.00</p>
